# CTRPluginFramework-BlankTemplate

./: CTRPluginFramework.plgInfo  Makefile  README.md
.github/workflows/: build.yml
Includes/: Audio.hpp  Network.hpp  Protocol.hpp  VoiceChat.hpp
Source/: VoiceChat.cpp
Sources/: Audio.cpp  Network.cpp  VoiceChat.cpp  main.cpp
server/: CMakeLists.txt  main.cpp
